# pico-i2s-playaround

./: CMakeLists.txt
data/: Ocarina_A_loop.bin.bak  Ocarina_A_loop.raw  Ocarina_B_loop.bin.bak  Ocarina_B_loop.raw.bak  Ocarina_D2_loop.bin.bak  Ocarina_D2_loop.raw  Ocarina_D_loop.bin.bak  Ocarina_F_loop.bin.bak  Ocarina_F_loop.raw
data/old/: Ocarina_D_loop.bin.bak
src/: data.S  i2s_32_441.pio  main.c  ws2812b.pio
